beta 4
======

- Fixed AR-65: ActiveRecordBase<T> prevent users from using type inheritance
  Refactored ActiveRecordBase<T> to extend ActiveRecordBase
  Refactored ActiveRecordMediator<T> to extend ActiveRecordMediator
  Could not do the same thing for the validation<T>

- Removed dependency on the Nullables library.

- Added native support for .NET 2.0 Nullables.

- Applied Brian Romanko <me@brianromanko.com> patch fixing enum support

- Fixed AR-62: DifferentDatabaseScope not switching between databases

- Introduced HybridWebThreadScopeInfo which, as the name implies, 
  uses both strategies to handle scope storage. Useful only for some complex scenarios

- Added support for RelationType.List.

- Simplified Exists<PkType> method on ActiveRecordBase<T>.

- Fixed AR-46 - OneToOne Attribute Does Not Support Specifying a Target Type
  Added property MapType to OneToOne attribute

- Added ActiveRecordStarter.ResetInitializationFlag. Useful for test cases 
  that invoke Initialize multiple times

- Fixed AR-52 - Dont allow one to invoke Initialize more than once

- Added some flexibility into ActiveRecord Queries. They are now mutable,
  which means we now have methods like 'SetParameter', 'SetParameterList' and
  'SetRange'; and the 'Query' property is now read-write.

- Added support for query modifiers in ActiveRecord Queries. Any object implementing
  IQueryModifier can be added to an ActiveRecordBaseQuery, using the 
  (protected) 'AddModifier' method. Parameters and query ranges 
  are implemented as query modifiers.

- Fixed AR-39: Added virtual to IsValid on ActiveRecordValidationBase/<T>

- Fixed AR-45: Added BindingFlags.NonPublic to DefaultBindingFlags on ActiveRecordModelBuilder

- Added Element to RelationAttribute, now can map relations of simple types
   Usage:
	 [HasMany(typeof(string), "ItemId", "Elements", Element = "Name")]

- Applied Antonio's patches 
  See http://forum.castleproject.org/posts/list/457.page and 